--- a/css/main.css
+++ b/css/main.css
@@ -614,16 +614,15 @@
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer .subscribe-to-the-newsletter-form-box-save .newsletter-icon {
+.footer .subscribe-to-the-newsletter-form-box-save-icon {
   position: absolute;
   left: 148px;
   top: 13px;
   fill: #ffffff;
   transition-property: fill;
   transition-duration: 250ms;
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer .subscribe-to-the-newsletter-form-box-save:focus, .footer .subscribe-to-the-newsletter-form-box-save:hover {
+.footer .subscribe-to-the-newsletter-form-box-save:hover, .footer .subscribe-to-the-newsletter-form-box-save:focus {
   border-radius: 5px;
   background-color: #0d83e4;
   color: #f3ebeb;
