--- a/css/main.css
+++ b/css/main.css
@@ -570,7 +570,7 @@
 .footer .subscribe-to-the-newsletter-form-box {
   display: flex;
 }
-.footer .subscribe-to-the-newsletter-form-box-email {
+.footer .subscribe-to-the-newsletter-form-box input {
   width: 358px;
   height: 50px;
   font-size: 16px;
@@ -586,13 +586,13 @@
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer .subscribe-to-the-newsletter-form-box-email:focus {
+.footer .subscribe-to-the-newsletter-form-box input:focus {
   background-color: #2f303a;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
   border-radius: 5px;
 }
-.footer .subscribe-to-the-newsletter-form-box-save {
+.footer .subscribe-to-the-newsletter-form-box button {
   position: relative;
   display: flex;
   text-align: center;
@@ -614,7 +614,7 @@
   transition-duration: 250ms;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer .subscribe-to-the-newsletter-form-box-save-icon {
+.footer .subscribe-to-the-newsletter-form-box button svg {
   position: absolute;
   left: 148px;
   top: 13px;
@@ -622,7 +622,7 @@
   transition-property: fill;
   transition-duration: 250ms;
 }
-.footer .subscribe-to-the-newsletter-form-box-save:hover, .footer .subscribe-to-the-newsletter-form-box-save:focus {
+.footer .subscribe-to-the-newsletter-form-box button:hover, .footer .subscribe-to-the-newsletter-form-box button:focus {
   border-radius: 5px;
   background-color: #0d83e4;
   color: #f3ebeb;
