--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -118,7 +118,7 @@
       &-box {
         display: flex;
 
-        &-email {
+        input {
           width: 358px;
           height: 50px;
           font-size: 16px;
@@ -140,7 +140,7 @@
             border-radius: 5px;
           }
         }
-        &-save {
+        button {
           position: relative;
           display: flex;
           text-align: center;
@@ -162,7 +162,7 @@
             box-shadow;
           transition-duration: 250ms;
           transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-          &-icon {
+          svg {
             position: absolute;
             left: 148px;
             top: 13px;
