--- a/sass/components/_footer.scss
+++ b/sass/components/_footer.scss
@@ -117,6 +117,7 @@
     &-form {
       &-box {
         display: flex;
+        flex-direction: row;
         input {
           width: 358px;
           height: 50px;
