--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -37,3 +37,5 @@ $backgroundColorSubscribeNewsletterButtonSave: #2196f3;
 $backgroundColorSubscribeNewsletterButtonSaveHover: #0d83e4;
 $colorSubscribeNewsletterButtonSave: #ffffff;
 $colorSubscribeNewsletterButtonSaveHover: #f3ebeb;
+$colorBackdropModalAgreementText: #757575;
+$colorBackdropModalAgreementLink: #2196f3;
