--- a/css/main.css
+++ b/css/main.css
@@ -791,7 +791,6 @@
 .backdrop-modal-order-box-items textarea {
   margin: 0;
   padding: 0;
-  display: block;
 }
 .backdrop-modal-order-box-items label {
   font-size: 12px;
@@ -807,10 +806,13 @@
   margin-top: 4px;
   padding-left: 40px;
 }
-.backdrop-modal-order-box-items .order-icon {
+.backdrop-modal-order-box-items svg {
   bottom: 11px;
   left: 12px;
   position: absolute;
+}
+.backdrop-modal-order-box-items input:checked + svg {
+  fill: #2196f3;
 }
 .backdrop-modal-order-box-items textarea {
   width: 100%;
@@ -836,22 +838,54 @@
 }
 .backdrop-modal-order-agreement {
   display: flex;
-  justify-content: center;
+  margin-top: 20px;
+  margin-bottom: 30px;
+}
+.backdrop-modal-order-agreement-check {
+  display: flex;
 }
 .backdrop-modal-order-agreement-check input {
-  position: relative;
+  -webkit-appearance: none;
+     -moz-appearance: none;
+          appearance: none;
 }
-.backdrop-modal-order-agreement-check svg {
-  position: absolute;
+.backdrop-modal-order-agreement-check input:checked + svg {
+  fill: #2196f3;
 }
 .backdrop-modal-order-agreement label {
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: #757575;
+  margin-left: 7px;
 }
 .backdrop-modal-order-agreement label a {
   color: #2196f3;
+}
+.backdrop-modal-order-send {
+  display: flex;
+  justify-content: center;
+}
+.backdrop-modal-order-send button {
+  width: 200px;
+  height: 50px;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.88;
+  letter-spacing: 0.06em;
+  background-color: #2196f3;
+  color: #ffffff;
+  border: none;
+  border-radius: 4px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  cursor: pointer;
+  transition-property: background-color, box-shadow;
+  transition-duration: 250ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.backdrop-modal-order-send button:hover, .backdrop-modal-order-send button:focus {
+  background-color: #1791f5;
+  box-shadow: 0px 3px 1px -2px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 1px 5px 0px rgba(0, 0, 0, 0.12);
 }
 
 body {
