--- a/sass/components/_order.scss
+++ b/sass/components/_order.scss
@@ -23,7 +23,7 @@
       textarea {
         margin: 0;
         padding: 0;
-        display: block;
+        // display: block;
       }
       label {
         font-size: 12px;
@@ -39,10 +39,13 @@
         margin-top: 4px;
         padding-left: 40px;
       }
-      .order-icon {
+      svg {
         bottom: 11px;
         left: 12px;
         position: absolute;
+      }
+      input:checked + svg {
+        fill: $colorBackdropModalAgreementLink;
       }
       textarea {
         width: 100%;
@@ -60,26 +63,67 @@
       textarea::placeholder {
         color: $colorFormLableTextarea;
       }
+    }&-input{
+      
     }
+    
+    
   }
+
   &-agreement {
     display: flex;
-    justify-content: center;
+    // justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 30px;
     &-check {
+      // dispaly: flex; - ustawia nam chcecboxa z label w jednej lini
+      display: flex;
+      // inny zapis &-check input {appearance: none}
       input {
-        position: relative;
+        appearance: none;
       }
-      svg {
-        position: absolute;
+
+      input:checked + svg {
+        fill: $colorBackdropModalAgreementLink;
       }
     }
+
     label {
       font-size: 14px;
       line-height: 1.71;
       letter-spacing: 0.03em;
       color: $colorBackdropModalAgreementText;
+      margin-left: 7px;
       a {
         color: $colorBackdropModalAgreementLink;
+      }
+    }
+  }
+
+  &-send {
+    display: flex;
+    justify-content: center;
+    button {
+      width: 200px;
+      height: 50px;
+      font-weight: 700;
+      font-size: 16px;
+      line-height: 1.88;
+      letter-spacing: 0.06em;
+      background-color: $backgroundColorModalSendButton;
+      color: $colorBackdropModalSendButton;
+      border: none;
+      border-radius: 4px;
+      box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+      cursor: pointer;
+      transition-property: background-color, box-shadow;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+      &:hover,
+      &:focus {
+        background-color: $backgroundColorModalSendButtonHover;
+        box-shadow: 0px 3px 1px -2px rgb(0 0 0 / 20%),
+          0px 2px 2px 0px rgb(0 0 0 / 14%), 0px 1px 5px 0px rgb(0 0 0 / 12%);
       }
     }
   }
