--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -43,3 +43,6 @@ $colorBackdropModalAgreementLink: #2196f3;
 $colorBackdropModalSendButton: #ffffff;
 $backgroundColorModalSendButton: #2196f3;
 $backgroundColorModalSendButtonHover: #1791f5;
+$colorBackdropModalAgreementCheckBoxBorder: #212121;
+$colorBackdropModalAgreementCheckBoxHoverFocus: #2196f3;
+$colorBackdropModalAgreementCheckBoxChecked: #2196f3;
