--- a/sass/components/_order.scss
+++ b/sass/components/_order.scss
@@ -18,12 +18,13 @@
     &-items {
       position: relative;
       margin-bottom: 10px;
+
       input,
       label,
       textarea {
         margin: 0;
         padding: 0;
-        // display: block;
+        display: block;
       }
       label {
         font-size: 12px;
@@ -39,14 +40,29 @@
         margin-top: 4px;
         padding-left: 40px;
       }
+      .input-box,
+      .order-icon {
+        outline: none;
+        &:hover,
+        &:focus {
+          border-color: $colorBackdropModalAgreementCheckBoxHoverFocus;
+          fill: $colorBackdropModalAgreementCheckBoxHoverFocus;
+        }
+      }
+
       svg {
         bottom: 11px;
         left: 12px;
         position: absolute;
+        outline: none;
       }
-      input:checked + svg {
-        fill: $colorBackdropModalAgreementLink;
-      }
+
+      // input:active + svg {
+      //   content: "";
+      //   outline: none;
+      //   fill: $colorBackdropModalAgreementCheckBoxHoverFocus;
+      // }
+
       textarea {
         width: 100%;
         height: 120px;
@@ -59,28 +75,70 @@
         border: 1px solid $borderColorLableBorderText;
         border-radius: 4px;
         margin-top: 4px;
+        &:hover,
+        &:focus-within {
+          border-color: $colorBackdropModalAgreementCheckBoxHoverFocus;
+        }
       }
       textarea::placeholder {
         color: $colorFormLableTextarea;
+      }
+      .textarea-box {
+        outline: none;
+        &:hover,
+        &:focus-within {
+          border-color: $colorBackdropModalAgreementCheckBoxHoverFocus;
+        }
       }
     }
   }
 
   &-agreement {
     display: flex;
-    // justify-content: center;
+    justify-content: center;
+
     margin-top: 20px;
     margin-bottom: 30px;
     &-check {
       // dispaly: flex; - ustawia nam chcecboxa z label w jednej lini
       display: flex;
+      align-items: center;
+      position: relative;
       // inny zapis &-check input {appearance: none}
+      // apperance: none; ukrywa sam obszar checkbox (mały kwadracik)
+      width: 16px;
+      height: 15px;
+      border: 2px solid $colorBackdropModalAgreementCheckBoxBorder;
+      border-radius: 3px;
+      // margin-right: 8px;
+      margin-top: 5px;
+      cursor: pointer;
+      &:hover,
+      &:focus-within {
+        border-color: $colorBackdropModalAgreementCheckBoxHoverFocus;
+      }
+
       input {
+        position: absolute;
         appearance: none;
+        margin-right: 8px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        width: 18px;
+        height: 16px;
+      }
+      svg {
+        position: absolute;
+        fill: none;
+        margin-right: 8px;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
       }
 
       input:checked + svg {
-        fill: $colorBackdropModalAgreementLink;
+        fill: $colorBackdropModalAgreementCheckBoxChecked;
       }
     }
 
