--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 // @import "components/modal";
 // @import "components/modal1";
 @import "components/modal2";
+@import "components/footer_newsletter";
 @import "components/order";
 
 body {
