--- a/sass/utils/_vars.scss
+++ b/sass/utils/_vars.scss
@@ -27,6 +27,8 @@ $backgroundColorBackdrop: rgba(0, 0, 0, 0.2);
 $colorSubscribeNewsletterTitle: #ffffff;
 $backgroundColorSubscribeNewsletterEmail: #2f303a;
 $colorSubscribeNewsletterBorderEmail: rgba(255, 255, 255, 0.3);
+$colorSubscribeNewsletterTextEmail: rgba(255, 255, 255, 0.6);
+$colorSubscribeNewsletterBorderEmailHoverFocus:#2196f3;
 $backgroundColorSubscribeNewsletterButtonSave: #2196f3;
 $backgroundColorSubscribeNewsletterButtonSaveHover: #0d83e4;
 $colorSubscribeNewsletterButtonSave: #ffffff;
@@ -40,6 +42,7 @@ $borderColorLableBorderText: rgba(33, 33, 33, 0.2);
 $borderColorLableBorderTextChecked: #2196f3;
 $colorBackdropModalAgreementText: #757575;
 $colorBackdropModalAgreementLink: #2196f3;
+$colorBackdropModalAgreementSvg: #ffffff;
 $colorBackdropModalSendButton: #ffffff;
 $backgroundColorModalSendButton: #2196f3;
 $backgroundColorModalSendButtonHover: #1791f5;
