--- a/sass/components/_order.scss
+++ b/sass/components/_order.scss
@@ -18,13 +18,20 @@
     &-items {
       position: relative;
       margin-bottom: 10px;
-
       input,
       label,
       textarea {
         margin: 0;
         padding: 0;
         display: block;
+        outline: none;
+        &:hover,
+        &:active,
+        &:focus,
+        &:focus-within {
+          border-color: $colorBackdropModalAgreementCheckBoxHoverFocus;
+          fill: $colorBackdropModalAgreementCheckBoxHoverFocus;
+        }
       }
       label {
         font-size: 12px;
@@ -40,28 +47,12 @@
         margin-top: 4px;
         padding-left: 40px;
       }
-      .input-box,
-      .order-icon {
-        outline: none;
-        &:hover,
-        &:focus {
-          border-color: $colorBackdropModalAgreementCheckBoxHoverFocus;
-          fill: $colorBackdropModalAgreementCheckBoxHoverFocus;
-        }
-      }
 
       svg {
         bottom: 11px;
         left: 12px;
         position: absolute;
-        outline: none;
       }
-
-      // input:active + svg {
-      //   content: "";
-      //   outline: none;
-      //   fill: $colorBackdropModalAgreementCheckBoxHoverFocus;
-      // }
 
       textarea {
         width: 100%;
@@ -75,20 +66,9 @@
         border: 1px solid $borderColorLableBorderText;
         border-radius: 4px;
         margin-top: 4px;
-        &:hover,
-        &:focus-within {
-          border-color: $colorBackdropModalAgreementCheckBoxHoverFocus;
-        }
       }
       textarea::placeholder {
         color: $colorFormLableTextarea;
-      }
-      .textarea-box {
-        outline: none;
-        &:hover,
-        &:focus-within {
-          border-color: $colorBackdropModalAgreementCheckBoxHoverFocus;
-        }
       }
     }
   }
@@ -96,7 +76,6 @@
   &-agreement {
     display: flex;
     justify-content: center;
-
     margin-top: 20px;
     margin-bottom: 30px;
     &-check {
@@ -105,39 +84,42 @@
       align-items: center;
       position: relative;
       // inny zapis &-check input {appearance: none}
-      // apperance: none; ukrywa sam obszar checkbox (mały kwadracik)
+      // apperance: none; ukrywa sam obszar checkbox (mały kwadracik) - staje się niewidoczny
       width: 16px;
       height: 15px;
       border: 2px solid $colorBackdropModalAgreementCheckBoxBorder;
       border-radius: 3px;
-      // margin-right: 8px;
       margin-top: 5px;
+      // overflow: hidden;
+      z-index: 3;
       cursor: pointer;
       &:hover,
-      &:focus-within {
+      &:focus {
         border-color: $colorBackdropModalAgreementCheckBoxHoverFocus;
+        fill: $colorBackdropModalAgreementCheckBoxHoverFocus;
       }
 
       input {
         position: absolute;
         appearance: none;
-        margin-right: 8px;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
-        width: 18px;
-        height: 16px;
+        width: 100%;
+        height: 100%;
+        z-index: 2;
+        cursor: pointer;
       }
       svg {
         position: absolute;
         fill: none;
-        margin-right: 8px;
         top: 50%;
         left: 50%;
         transform: translate(-50%, -50%);
+        z-index: 1;
       }
 
-      input:checked + svg {
+      input:checked ~ svg {
         fill: $colorBackdropModalAgreementCheckBoxChecked;
       }
     }
