--- a/sass/components/_footer_newsletter.scss
+++ b/sass/components/_footer_newsletter.scss
@@ -74,7 +74,8 @@
           transition-duration: 250ms;
         }
         &:hover,
-        &:focus {
+        &:focus,
+        &:focus-within {
           border-radius: 5px;
           background-color: $backgroundColorSubscribeNewsletterButtonSaveHover;
           color: $colorSubscribeNewsletterButtonSaveHover;
