--- a/sass/components/_order.scss
+++ b/sass/components/_order.scss
@@ -25,6 +25,9 @@
         padding: 0;
         display: block;
         outline: none;
+        transition-property: border-color, fill;
+        transition-duration: 250ms;
+        transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
         &:hover,
         &:active,
         &:focus,
@@ -93,6 +96,9 @@
       // overflow: hidden;
       z-index: 3;
       cursor: pointer;
+      transition-property: border-color, fill;
+      transition-duration: 250ms;
+      transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
       &:hover,
       &:focus {
         border-color: $colorBackdropModalAgreementCheckBoxHoverFocus;
